--- a/forserver/admin.html
+++ b/forserver/admin.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="loginstyle.css">
     <title>관리자페이지</title>
 </head>
 <body>
@@ -27,6 +28,30 @@
     </script>
 
     <?php
+    include("../fmysql.php");
+    include("../mapzip-mysql-define.php");
+    include("../mapzip-state-define.php");
+
+    if(!$conn = connect_mysqli(MYSQL_IP,MAIN_DB,DB_PASSWORD,USE_DB)){
+        echo "connnection error!\n";
+        //$to_client['state']=DB_CONNECTION_ERROR;
+    }
+    else{
+        echo "connect success!<br>";
+    }
+
+    $sql = "SELECT * FROM ".UPDATE_TABLE;
+
+    if(!$result = mysqli_query($conn,$sql)){
+        echo "query fail...\n";
+        //$to_client['state']=SQL_QUERY_ERROR;
+    }
+    while($row = mysqli_fetch_assoc($result)){
+         echo($row['id']."<br>");
+         echo($row['version']."<br>");
+         echo($row['contents']."<br>");
+    }
+    
     if($_POST['do']=="ok"){
     	echo("new contents : ".$_POST['new_fetch_contents']." !<br>");
     	echo "<script>fill_old();</script><br>";
