--- a/forserver/admin.html
+++ b/forserver/admin.html
@@ -14,7 +14,8 @@
     <textarea id="old_fetch_contents" cols="100" rows="15" readonly="readonly"></textarea>
     <form id="contact-form" action="admin.html" method="post" onsubmit="update_new()">
         <label>새로운 패치사항 : </label><br />
-        <textarea name="new_fetch_contents" cols="100" rows="20"></textarea>
+        <textarea name="new_fetch_contents" cols="100" rows="20"></textarea><br>
+        <label>새버전 : </label><input type="text" name="new_version" />
         <input type="hidden" name="do" value="ok" />
         <input type="submit" value="submit" id="fetch_submit"/>
     </form>
@@ -46,14 +47,14 @@
     
     if($_POST['do']=="ok"){
     	echo("new contents : ".$_POST['new_fetch_contents']." !<br>");
-        $sql = "UPDATE ".UPDATE_TABLE." SET contents = '{$_POST['new_fetch_contents']}' where id = 1";
+        $sql = "UPDATE ".UPDATE_TABLE." SET contents = '{$_POST['new_fetch_contents']}', version = {$_POST['new_version']} where id = 1";
     	//echo "<script>fill_old();</script><br>";
         if(!$result = mysqli_query($conn,$sql)){
             echo "query fail...\n";
         //$to_client['state']=SQL_QUERY_ERROR;
         }
         $old_contents = "ID : "."1".'\n';
-        $old_contents .= "버전 : "."2".'\n';
+        $old_contents .= "버전 : ".$_POST['new_version'].'\n';
         $old_contents .= "내용 : ".'\n'.$_POST['new_fetch_contents'].'\n';
     }
     else{
