adminlogin 페이지를 거치지 않고, url을 직접 이용해서 접근하려는 시도를 막기위한 장치와 그에 따른 errorPage 구현했습니다. adminlogin은 form 태그로 수정했습니다.

--- a/forserver/admin.html
+++ b/forserver/admin.html
@@ -7,6 +7,13 @@
     <title>관리자페이지</title>
 </head>
 <body>
+    
+    <?php
+    if($_POST['onlyfrom']!='ok'){
+        echo('<script>location.replace("./errorPage.html");</script>');
+    }
+    ?>
+   
 <div class="center-part">
     <h1>MapZip 관리자 페이지입니다</h1>
     <h2>패치사항에 알려줄 내용을 적는 부분입니다.</h2>
@@ -17,6 +24,7 @@
         <textarea name="new_fetch_contents" cols="100" rows="20"></textarea><br>
         <label>새버전 : </label><input type="text" name="new_version" />
         <input type="hidden" name="do" value="ok" />
+        <input type="hidden" name="onlyfrom" value="ok"/>
         <input type="submit" value="submit" id="fetch_submit"/>
     </form>
 </div>
