--- a/forserver/user_sound_admin.html
+++ b/forserver/user_sound_admin.html
@@ -3,11 +3,21 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="admin_all.css">
     <link rel="stylesheet" href="loginstyle.css">
     <title>관리자페이지</title>
 </head>
 <body>
-<div class="center-part">
+    <div id="nav_menu">
+        <ul>
+            <li><a href="./adminlogin.html">메뉴 1</a></li>
+            <li><a href="./adminlogin.html">메뉴 2</a></li>
+            <li><a href="./adminlogin.html">메뉴 3</a></li>
+            <li><a href="./adminlogin.html">메뉴 4</a></li>
+            <li><a href="./adminlogin.html">메뉴 5</a></li>
+        </ul>
+    </div>
+    <div class="center-part">
     <h1>MapZip 유저의견 페이지입니다</h1>
     <h2>클라이언트로부터 전달된 유저들의 의견을 볼 수 있습니다</h2>
     
