admin.html 을 fetch_admin.html 로 변경하였습니다 로그인페이지에서 다른페이지로 넘어갈때, 로그인 세선기능으로 인증하여 넘어가도록 수정하였습니다. 리뷰를 삭제기능을 완성하였습니다. 리뷰삭제 성공,실패, 이미지 디렉토리 삭제 성공,실패,없음 상태코드도 추가되었습니다.

--- a/forserver/adminlogin.html
+++ b/forserver/adminlogin.html
@@ -8,10 +8,10 @@
 		<div class="login-screen">
 			<div class="app-title">
         <H2>MAPZIP Admin Page</H2>
-        <form action="./admin.html" method="post">
+        <form action="./fetch_admin.html" method="post">
           <input type="text" name="login-id" value="" placeholder="ID" id="login-id"><br/><br/>
           <input type="password" name="login-pass" value="" placeholder="PASSWORD" id="login-pass" onkeypress="if(event.keyCode==13){fnEnterCheck(); return false;}"/><br/><br/>
-          <input type="hidden" name="onlyfrom" value="ok" />
+          <!--<input type="hidden" name="onlyfrom" value="ok" />-->
           <input type="submit" value="LOGIN" class="btn btn-primary btn-large btn-block" id="end" onclick="if(fnLogin()!=1){return false;}"/>
         </form>
       
@@ -25,6 +25,10 @@ function fnLogin(){
   var objPasswd = document.getElementById("login-pass");
   
   if((objLogin.value==="ppang") && (objPasswd.value==="ppang")){
+    if(window.sessionStorage){
+      sessionStorage.setItem('isLogin','ok');
+
+    }
     document.getElementById("end").click();
   //location.replace("http://ljs93kr.cafe24.com/mapzip/forserver/admin.html");
     return 1;
