css 대격변. 전체 레이아웃으로 나눴고 full-frame 안에 nav와 center-part, contents-main 등으로 레이아웃 수정했습니다.

--- a/forserver/nav_contents.html
+++ b/forserver/nav_contents.html
@@ -1,4 +1,4 @@
-<div id="nav_menu">
+<div class="nav_menu">
 	<ul>
         <li><a href="./adminlogin.html">로그인 페이지</a></li>
         <li><a href="./fetch_admin.html">공지사항 관리 페이지</a></li>
