--- a/forserver/adminlogin.html
+++ b/forserver/adminlogin.html
@@ -9,7 +9,7 @@
 			<div class="app-title">
         <H2>MAPZIP Admin Page</H2>
         <form action="./fetch_admin.html" method="post">
-          <input type="text" name="login-id" value="" placeholder="ID" id="login-id"><br/><br/>
+          <input type="text" name="login-id" value="" placeholder="ID" id="login-id" autofocus><br/><br/>
           <input type="password" name="login-pass" value="" placeholder="PASSWORD" id="login-pass" onkeypress="if(event.keyCode==13){fnEnterCheck(); return false;}"/><br/><br/>
           <!--<input type="hidden" name="onlyfrom" value="ok" />-->
           <input type="submit" value="LOGIN" class="btn btn-primary btn-large btn-block" id="end" onclick="if(fnLogin()!=1){return false;}"/>
