--- a/forserver/state_query_admin.html
+++ b/forserver/state_query_admin.html
@@ -20,7 +20,7 @@
 				while( !feof($fp) ){
 					$one_line = fgets($fp);
 					if($one_line[0]=='/'){
-						$doc_data .= "주석 : ".$one_line; 
+						$doc_data .= "구분 : ".$one_line; 
 					}
 					else{
 						$doc_data .= $one_line;
