관리자페이지에 유저정보 삭제부분을 연결시켰습니다. 앞으로 회원탈퇴 기능을 이용할때, 본 페이지를 이용하면 됩니다.

--- a/forserver/nav_contents.html
+++ b/forserver/nav_contents.html
@@ -4,6 +4,6 @@
         <li><a href="./fetch_admin.html">공지사항 관리 페이지</a></li>
         <li><a href="./user_sound_admin.html">유저 의견 관리 페이지</a></li>
         <li><a href="./state_query_admin.html">상태코드 조회하기</a></li>
-        <li><a href="">메뉴 10</a></li>
+        <li><a href="./delete_user_info.html">사용자정보 관리하기</a></li>
     </ul>
 </div>
