--- a/forserver/nav_contents.html
+++ b/forserver/nav_contents.html
@@ -5,5 +5,6 @@
         <li><a href="./user_sound_admin.html">유저 의견 관리 페이지</a></li>
         <li><a href="./state_query_admin.html">상태코드 조회하기</a></li>
         <li><a href="./delete_user_info.html">사용자정보 관리하기</a></li>
+        <li><a href="">새 메뉴</a></li>
     </ul>
 </div>
