--- a/forserver/nav_contents.html
+++ b/forserver/nav_contents.html
@@ -1,10 +1,10 @@
 <div class="nav_menu">
-	<ul>
-        <li><a href="./adminlogin.html">로그인 페이지</a></li>
-        <li><a href="./fetch_admin.html">공지사항 관리 페이지</a></li>
-        <li><a href="./user_sound_admin.html">유저 의견 관리 페이지</a></li>
-        <li><a href="./state_query_admin.html">상태코드 조회하기</a></li>
-        <li><a href="./delete_user_info.html">사용자정보 관리하기</a></li>
-        <li><a href="">새 메뉴</a></li>
+	<ul class="nav_ul">
+        <li><a href="./adminlogin.html" class="nav_href">로그인 페이지</a></li>
+        <li><a href="./fetch_admin.html" class="nav_href">공지사항 관리 페이지</a></li>
+        <li><a href="./user_sound_admin.html" class="nav_href">유저 의견 관리 페이지</a></li>
+        <li><a href="./state_query_admin.html" class="nav_href">상태코드 조회하기</a></li>
+        <li><a href="./delete_user_info.html" class="nav_href">사용자정보 관리하기</a></li>
+        <li><a href="" class="nav_href">새 메뉴</a></li>
     </ul>
 </div>
