gym push admin 페이지 완성되었고, 전체이용자에게 보내는 메세지를 작성할 수 있습니다.

--- a/forserver/nav_contents.html
+++ b/forserver/nav_contents.html
@@ -5,7 +5,7 @@
         <li><a href="./user_sound_admin.html" class="nav_href">유저 의견 관리 페이지</a></li>
         <li><a href="./state_query_admin.html" class="nav_href">상태코드 조회하기</a></li>
         <li><a href="./delete_user_info.html" class="nav_href">사용자정보 관리하기</a></li>
-        <li><a href="" class="nav_href">GCM 푸시</a></li>
+        <li><a href="./gcm_push_admin.html" class="nav_href">GCM 푸시</a></li>
         <li><a href="" class="nav_href">새 메뉴</a></li>
     </ul>
 </div>
