bootstrap css와 js 를 적용하였습니다

--- a/forserver/adminlogin.html
+++ b/forserver/adminlogin.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>login_for_admin</title>
-<link rel="stylesheet" href="loginstyle.css">
+<link rel="stylesheet" href="static/css/loginstyle.css">
  </head>
  <body>
 <div class="login">
