이미지 디렉토리 구조 대폭 변경했습니다. 이미지 디렉토리 생성 관련 모듈을 따로 뺏습니다

--- a/forserver/delete_user_info.html
+++ b/forserver/delete_user_info.html
@@ -97,7 +97,12 @@
 
         if($_POST['total_delete'] == 1){
             // 전체 정보 삭제
-            echo "total delete <br>";
+             echo "total delete <br>";
+            $sql = "SELECT * FROM ".USER_TABLE;
+            if(!$result = mysqli_query($conn,$sql)){
+                echo "select fail<br>";
+            }
+           
             while($row = mysqli_fetch_assoc($result)){
             // delete on user_info table 
                 $user_leave->setTargetId($row['userid']);
