--- a/introduce/home.html
+++ b/introduce/home.html
@@ -10,6 +10,10 @@
     #home-carousel{
     	height: 400px;
     }
+    .home-image{
+      width: 100%;
+      height: auto;
+    }
     </style>
     <title>타이틀</title>
 </head>
@@ -30,7 +34,7 @@
   				<!-- Wrapper for slides -->
   				<div class="carousel-inner" role="listbox">
     				<div class="item active">
-      					<img src="static/images/emotion1.png" alt="emotion1" class="img-responsive">
+      					<img src="static/images/mapzip_top.png" alt="emotion1" class="home-image">
       					<div class="carousel-caption">
         					<h3>첫번째 사진</h3>
         					<p>첫번째 사진에 대한 설명</p>
